examples/negative/mutable/mutable_through_field.kai
# Silent contract (#511 audit) — issue #251/#252 rule 1: `array_set`
# on an Array read from a record field originating outside the
# function is an observable mutation. The fn declares no row, yet
# the typer accepts.

type Bucket = { items: Array[Int] }

fn writer(b: Bucket) : Unit = {
  let _ = Mutable.array_set(b.items, 0, 99)
  ()
}

fn main() : Int / Mutable {
  let xs = Mutable.array_make(1, 0)
  let b = Bucket { items: xs }
  writer(b)
  Mutable.array_get(xs, 0)
}
